--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -74,23 +74,24 @@
 }
 
 .card {
-  margin: 1rem;
-  padding: 1.5rem;
   text-align: left;
   color: inherit;
   text-decoration: none;
   border: 1px solid #eaeaea;
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
 }
 
-.card:hover,
 .card:focus,
 .card:active {
-  color: #0070f3;
-  border-color: #0070f3;
+  color: #644ce4;
+  border-color: #644ce4;
 }
+/* 
+.activeCard {
+  color: #644ce4 !important;
+  border: 1px solid #644ce4 !important;
+} */
 
 .card h2 {
   margin: 0 0 1rem 0;
